--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=test jest ",
+    "test:unit": "jest ",
+    "test:integration": "jest -c jest.intgration.config.js ",
+    "test": "npm run test:unit && npm run test:integration",
     "start": "nodemon index.js",
     "pretest": "cross-env NODE_ENV=test npm run db:reset",
     "db:reset": "npx sequelize-cli db:drop && npx sequelize-cli db:create && npx sequelize-cli db:migrate && npx sequelize-cli db:seed:all",
