--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         node-version:[12.x,14.x]
     steps:
       - uses: actions/checkout@v2
-      - name: set up node
+      - name: Use Node.js ${{ matrix.node-version }}
       - uses: actions/setup-node@v32
         with:
           node-version: ${{matrix.node-version}}
