--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,5 +1,7 @@
 name: pull_request on feature_unit_test
 on:
+  push:
+    branches: ["feature/intigration_test"]
   pull_request:
     branches: ["feature/intigration_test"]
 
